--- a/styles/main.css
+++ b/styles/main.css
@@ -68,11 +68,34 @@ h1 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin: 25px;
+  font-size: 1em;
 }
 
 #points {
   font-size: 26px;
+}
+
+.icons {
+  max-width: 45px;
+  height: auto;
+}
+
+#info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px;
+}
+
+#info ul,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+#info ul li {
+  display: flex;
+  align-items: center;
 }
 
 /*
@@ -93,13 +116,6 @@ h1 {
 }
 
 /* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
-}
 
 .close:hover,
 .close:focus {
@@ -132,7 +148,7 @@ h1 {
   text-align: center;
   position: relative;
   background-color: #ba8530;
-  margin: 40px auto;
+  margin: 15px auto;
   padding: 25px;
   font-size: 25px;
   border: 1px solid #888;
