--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,9 @@ h1 {
 }
 
 .bullet {
-  background-color: #181818;
+  /* background-color: #181818; */
+  background-image: url("../images/bala.png");
+  background-size: cover;
   position: absolute;
   z-index: 1;
 }
@@ -69,6 +71,11 @@ h1 {
   justify-content: space-evenly;
   align-items: center;
   font-size: 1em;
+  width: 98%;
+}
+
+#intro h1 {
+  width: 23%;
 }
 
 #points {
