--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ h1 {
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
-  background-image: url("../images/board-bg.jpg");
+  background-image: url("../images/board-bg-4.jpg");
   background-size: cover;
 }
 
@@ -106,6 +106,25 @@ h3 {
   align-items: center;
 }
 
+#point-system {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 15px;
+}
+
+#point-system ul,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+
+#point-system ul li {
+  display: flex;
+  align-items: center;
+  margin: 20px auto;
+}
+
 /*
 * MODAL FOR WHEN TIME FINISHES
 */
@@ -160,7 +179,7 @@ h3 {
   padding: 25px;
   font-size: 25px;
   border: 1px solid #888;
-  width: 80%;
+  width: 85%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   animation-name: animatetop;
   animation-duration: 0.4s;
