fix: objectives no longer appear too up, down or in the middle

--- a/styles/main.css
+++ b/styles/main.css
@@ -68,14 +68,14 @@ h1 {
 
 #intro {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   font-size: 1em;
   width: 98%;
 }
 
 #intro h1 {
-  width: 23%;
+  width: 19%;
   text-align: left;
 }
 
