fix: bg image now fits more a pixel theme

--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@ h1 {
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
-  background-image: url("../images/board-bg-4.jpg");
+  background-image: url("../images/board-bg-6.png");
   background-size: cover;
 }
 
